--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div id='headers'>
                 <!-- Title and subtitles! -->
-                <h1 id='title'><strong>Play THE Guessing Game!</strong></Play></h1>
+                <h1 id='title'><strong>Play The Guessing Game!</strong></Play></h1>
                 <h3 id='subtitle'><strong>Guess a number between 1-100</strong></h3>
             </div>
 
